"Revert" and "Recover Last Session" have no prompt #39378

Closed
opened 2014-03-24 01:56:49 +01:00 by Raphael Stoeckli · 8 comments

System Information
Windows 7 x64, Nvidia GeForce GTX 760

Blender Version
Broken: (example: 2.7 19e627c)

Short description of error
The menu items "Revert" and "Recover Last Session" under menu point "File" are not providing a prompt just like menu item "File">"New", or if Blender is closed.
Clicking on the mentioned items discards the current blend file immediately without any question. Not so nice if you clicked on these items accidentially.

Exact steps for others to reproduce the error

  • Open a blend file
  • Work on it
  • Go to menu "File"
  • Click on "Revert" or "Recover Last Session"
  • Your progress is gone (no leading question like "are you sure to recover the last session?")
**System Information** Windows 7 x64, Nvidia GeForce GTX 760 **Blender Version** Broken: (example: 2.7 19e627c) **Short description of error** The menu items "Revert" and "Recover Last Session" under menu point "File" are not providing a prompt just like menu item "File">"New", or if Blender is closed. Clicking on the mentioned items discards the current blend file immediately without any question. Not so nice if you clicked on these items accidentially. **Exact steps for others to reproduce the error** - Open a blend file - Work on it - Go to menu "File" - Click on "Revert" or "Recover Last Session" - Your progress is gone (no leading question like "are you sure to recover the last session?")

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RaphaelStoeckli

Added subscriber: @RaphaelStoeckli

Added subscriber: @mont29

Added subscriber: @mont29

Added subscribers: @JonathanWilliamson, @brecht

Added subscribers: @JonathanWilliamson, @brecht
Member

Added subscriber: @revzin

Added subscriber: @revzin
Member

Fixed in D440: Small fix for #39378: "Revert" and "Recover Last Session" have no prompt, could anyone review? Hope Bastien hasn't fixed it yet :)

Fixed in [D440: Small fix for #39378: "Revert" and "Recover Last Session" have no prompt](https://archive.blender.org/developer/D440), could anyone review? Hope Bastien hasn't fixed it yet :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2014-04-01 18:03:13 +02:00

Fixed, thanks for the report and patch!

Fixed, thanks for the report and patch!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39378
No description provided.