Fix T39378: Revert, Recover Last Session and Load Factory Settings have no prompt.

Now they do, to make it harder to accidentally press them and lose work.

Reviewed By: brecht, carter2422

Differential Revision: https://developer.blender.org/D440